--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "trexology/pointable",
+    "name": "czemu/laravel-pointable",
     "description": "Point system for Laravel 5",
     "keywords": ["points", "pointable", "laravel", "loyalty", "reward"],
     "license": "MIT",
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.5.9",
-        "illuminate/support": "~5.0"
+        "illuminate/support": "~5.0|^6.0|^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
